<resources>
    <string name="app_name">Calculator2</string>
    <string name="c">C</string>
    <string name="_0">0</string>
    <string name="point">.</string>
    <string name="equal">=</string>
    <string name="deleteArrow">⬅</string>
    <string name="btnSwitch">+/-</string>
    <string name="x_2">x^2</string>
    <string name="division">/</string>
    <string name="_7">7</string>
    <string name="_8">8</string>
    <string name="_9">9</string>
    <string name="x">x</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="plus">+</string>
</resources>